--- a/Story.html
+++ b/Story.html
@@ -17,7 +17,7 @@ p{
 
 <body>
     <body class="Stars">
-    <a href="Talesinblood.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="Story.html">The Stars</a>
     <a href="Story2.html">The Outcast</a>
 
