--- a/Story2.html
+++ b/Story2.html
@@ -19,7 +19,7 @@ h2{
 </style>
 <body>
     <body class="Outcast"> 
-    <a href="Talesinblood.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="Story.html">The Stars</a>
     <a href="Story2.html">The Outcast</a>
 
